[release/publish-v20140603] Fix download panel disppear after create kp and Fix too much notification

--- a/src/assets/scss/component/toolbar-modal.scss
+++ b/src/assets/scss/component/toolbar-modal.scss
@@ -195,6 +195,9 @@ $dark-blue: #001324;
 				&:hover {
 					color: #148BE6;
 				}
+				&[disabled]:hover {
+					color: #666;
+				}
 			}
 		}
 	}
